force-app/main/default/objects/ConfiguracoesGerais__c/fields/LimiteDownloadArquivos__c.field-meta.xml
<CustomField>
    <fullName>LimiteDownloadArquivos__c</fullName>
    <inlineHelpText>Limite de arquivos que a funcionalidade de download do Documentaion vai fazer ao mesmo tempo</inlineHelpText>
    <label>Limite Download Arquivos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>