force-app/main/default/objects/ConfiguracoesGerais__c/fields/TCF_URLSalesforce__c.field-meta.xml
<CustomField>
    <fullName>TCF_URLSalesforce__c</fullName>
    <label>URL Salesforce</label>
    <type>Url</type>
</CustomField>