force-app/main/default/objects/ConfiguracoesGerais__c/fields/URLPortalFornecedor__c.field-meta.xml
<CustomField>
    <fullName>URLPortalFornecedor__c</fullName>
    <label>URL do portal do fornecedor</label>
    <required>true</required>
    <type>Url</type>
</CustomField>